<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotis_applications</name>
  <version>0.0.1</version>
  <description>Meta package for Robotis Applications</description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robotis_vuer</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
